--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -1,6 +1,20 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <h2>Welcome to Page Analyzer</h2>
-  <p>This app checks web pages for basic SEO suitability.</p>
+<div class="container d-flex justify-content-center mt-5">
+  <div class="bg-light p-5 shadow-sm rounded-3" style="max-width: 700px; width: 100%;">
+    <h1 class="display-4 text-center">Анализатор страниц</h1>
+    <p class="lead text-center">Бесплатно проверяйте сайты на SEO-пригодность</p>
+
+    <form method="post" class="row g-2 justify-content-center mt-4" action="{{ url_for('urls_add') }}">
+      <div class="col-md-8">
+        <input type="text" name="url" class="form-control form-control-lg" placeholder="https://www.example.com" required>
+      </div>
+      <div class="col-auto">
+        <button type="submit" class="btn btn-primary btn-lg">ПРОВЕРИТЬ</button>
+      </div>
+    </form>
+  </div>
+</div>
+
 {% endblock %}
