--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -13,11 +13,11 @@
       </tr>
     </thead>
     <tbody>
-      {% for id, name, created_at in urls %}
+      {% for url in urls %}
         <tr>
-          <td>{{ id }}</td>
-          <td><a href="{{ url_for('urls_show', id=id) }}">{{ name }}</a></td>
-          <td>{{ created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+          <td>{{ url.id }}</td>
+          <td><a href="{{ url_for('urls_show', id=url.id) }}">{{ url.name }}</a></td>
+          <td>{{ url.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
         </tr>
       {% endfor %}
     </tbody>
