final step corrects 1

--- a/page_analyzer/templates/urls_show.html
+++ b/page_analyzer/templates/urls_show.html
@@ -14,7 +14,7 @@
       <td>{{ url.name }}</td>
     </tr>
     <tr>
-      <th>Дата создания</th>
+      <th>Последняя проверка</th>
       <td>{{ url.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
     </tr>
 </table>
@@ -24,7 +24,7 @@
 <h2>История проверок</h2>
 
 {% if checks %}
-<table>
+<table data-test="checks">
     <thead>
         <tr>
             <th>ID</th>
