--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -9,7 +9,8 @@
       <tr>
         <th>ID</th>
         <th>Имя</th>
-        <th>Дата создания</th>
+        <th>Последняя проверка</th>
+        <th>Код ответа</th>
       </tr>
     </thead>
     <tbody>
@@ -18,6 +19,7 @@
           <td>{{ url.id }}</td>
           <td><a href="{{ url_for('urls_show', id=url.id) }}">{{ url.name }}</a></td>
           <td>{{ url.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+          <td>{{ url.status_code or '' }}</td>
         </tr>
       {% endfor %}
     </tbody>
