final step corrects 2 (button)

--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -11,7 +11,7 @@
         <input type="text" name="url" class="form-control form-control-lg" placeholder="https://www.example.com" required>
       </div>
       <div class="col-auto">
-        <button type="submit" class="btn btn-primary btn-lg">ПРОВЕРИТЬ</button>
+        <input type="submit" value="ПРОВЕРИТЬ" class="btn btn-primary btn-lg"></input>
       </div>
     </form>
   </div>
