final step corrects 3 (dates)

--- a/page_analyzer/templates/urls_show.html
+++ b/page_analyzer/templates/urls_show.html
@@ -15,7 +15,13 @@
     </tr>
     <tr>
       <th>Последняя проверка</th>
-      <td>{{ url.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+<td>
+  {% if checks %}
+    {{ checks[0].created_at.strftime('%Y-%m-%d %H:%M:%S') }}
+  {% else %}
+    —
+  {% endif %}
+</td>
     </tr>
 </table>
 <form method="post" action="{{ url_for('urls_checks', id=url.id) }}">
