--- a/page_analyzer/templates/layout.html
+++ b/page_analyzer/templates/layout.html
@@ -12,6 +12,18 @@
   </head>
   <body>
     <div class="container py-5">
+      {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    <div class="container mt-4">
+      {% for category, message in messages %}
+        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+      {% endfor %}
+    </div>
+  {% endif %}
+{% endwith %}
       {% block content %}{% endblock %}
     </div>
   </body>
