--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -18,7 +18,7 @@
         <tr>
           <td>{{ url.id }}</td>
           <td><a href="{{ url_for('urls_show', id=url.id) }}">{{ url.name }}</a></td>
-          <td>{{ url.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+          <td>{{ url.checked_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
           <td>{{ url.status_code or '' }}</td>
         </tr>
       {% endfor %}
