--- a/page_analyzer/templates/layout.html
+++ b/page_analyzer/templates/layout.html
@@ -10,6 +10,20 @@
           integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
           crossorigin="anonymous">
   </head>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="{{ url_for('index') }}">Анализатор страниц</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link {% if request.endpoint == 'urls_index' %}active{% endif %}" href="{{ url_for('urls_index') }}">Сайты</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  </nav>
+
   <body>
     <div class="container py-5">
       {% with messages = get_flashed_messages(with_categories=true) %}
